--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="left-section">
     <div id="discover">
-      <a href="mainpage.html"><img src="images/vintage-video-camera-logo-for-movie-or-cinema-vector-35120946.webp" alt=""></a>
+      <a href="index.html"><img src="images/vintage-video-camera-logo-for-movie-or-cinema-vector-35120946.webp" alt=""></a>
       <hr>
       
       <h1>Discover</h1>
